--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "array-to-tree": "^3.3.0",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
-    "upoint-vue-ui": "^1.0.4",
+    "upoint-vue-ui": "^1.0.5",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
