--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "array-to-tree": "^3.3.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
     "upoint-vue-ui": "^1.0.5",
