--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "upoint-vue-ui": "^1.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
