--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@sentry/browser": "^4.5.1",
     "array-to-tree": "^3.3.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.4",
